--- a/tegel/src/components/textfield/textfield-theme-vars.scss
+++ b/tegel/src/components/textfield/textfield-theme-vars.scss
@@ -28,10 +28,10 @@
   --sdds-textfield-border-bottom-success: var(--sdds-grey-800);
 
   //error
-  --sdds-textfield-border-bottom-error: var(--sdds-red-500);
-  --sdds-textfield-helper-error: var(--sdds-red-500);
-  --sdds-textfield-bar-error: var(--sdds-red-500);
-  --sdds-textfield-icon-error: var(--sdds-red-500);
+  --sdds-textfield-border-bottom-error: var(--sdds-negative);
+  --sdds-textfield-helper-error: var(--sdds-negative);
+  --sdds-textfield-bar-error: var(--sdds-negative);
+  --sdds-textfield-icon-error: var(--sdds-negative);
 
   //Textcounter
   --sdds-textfield-textcounter: var(--sdds-grey-700);
@@ -51,16 +51,15 @@
   //White background
   --sdds-textfield-on-white-background: var(--sdds-grey-50);
 
-    // Read only
-    --sdds-textfield-icon-read-only-color: var(--sdds-grey-600);
-    --sdds-textfield-icon-read-only-label-color: var(--sdds-grey-800);
+  // Read only
+  --sdds-textfield-icon-read-only-color: var(--sdds-grey-600);
+  --sdds-textfield-icon-read-only-label-color: var(--sdds-grey-800);
 }
 
 .sdds-theme-dark {
   --sdds-textfield-color: var(--sdds-grey-200);
   --sdds-textfield-background: var(--sdds-grey-900);
   --sdds-textfield-placeholder: var(--sdds-grey-600);
-
   --sdds-textfield-border-bottom: var(--sdds-grey-400);
   --sdds-textfield-border-bottom-hover: var(--sdds-grey-600);
 
@@ -71,10 +70,9 @@
   --sdds-textfield-disabled-placeholder: var(--sdds-grey-800);
   --sdds-textfield-disabled-label: var(--sdds-grey-700);
 
-  
   // Label
   --sdds-textfield-label-color: var(--sdds-grey-100);
-  --sdds-textfield-label-inside-color: var(--sdds-grey-400);  
+  --sdds-textfield-label-inside-color: var(--sdds-grey-400);
   --sdds-textfield-placeholder-focus-color: var(--sdds-grey-700);
 
   //Highlight bar
@@ -82,7 +80,6 @@
 
   //helper
   --sdds-textfield-helper: var(--sdds-grey-600);
-
 
   //error
   --sdds-textfield-helper-error: var(--sdds-negative);
@@ -108,7 +105,7 @@
   --sdds-textfield-border-bottom-success: var(--sdds-grey-400);
   --sdds-textfield-border-bottom-error: var(--sdds-negative);
 
-    // Read only
-    --sdds-textfield-icon-read-only-color: var(--sdds-grey-100);
-    --sdds-textfield-icon-read-only-label-color: var(--sdds-grey-50);
+  // Read only
+  --sdds-textfield-icon-read-only-color: var(--sdds-grey-100);
+  --sdds-textfield-icon-read-only-label-color: var(--sdds-grey-50);
 }
